After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 363166 - IPv6: no IPv4 fallback
IPv6: no IPv4 fallback
Status: RESOLVED FIXED
Product: Pan
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: 1.0
Assigned To: Charles Kerr
Pan QA Team
Depends on:
Blocks:
 
 
Reported: 2006-10-18 15:29 UTC by Pav Lucistnik
Modified: 2006-11-10 17:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0.118 patch (680 bytes, patch)
2006-11-07 17:19 UTC, Charles Kerr
none Details | Review

Description Pav Lucistnik 2006-10-18 15:29:47 UTC
Please describe the problem:
When connecting to a news server, which have both IPv4 and IPv6 connectivy, from computer, where IPv6 stack is configured, but where is no IPv6 connectivity (majority of Linux/UNIX installs today), pan does no try to connect via IPv4 after connect attempt on IPv6 failed.

Steps to reproduce:
$ host news.vol.cz
news.vol.cz has address 195.250.128.45
news.vol.cz has IPv6 address 2001:1508:1003:a::2

Actual results:
$ pan
** Message: Connect failed: No route to host
** Message: Connect failed: Invalid argument
** Message: couldn't create a socket.


Expected results:
$ telnet news.vol.cz 119
Trying 2001:1508:1003:a::2...
telnet: connect to address 2001:1508:1003:a::2: No route to host
Trying 195.250.128.45...
Connected to news.vol.cz.
Escape character is '^]'.
200 news.vol.cz InterNetNews NNRP server INN 2.4.1 ready (posting ok).
QUIT
205 .
Connection closed by foreign host.


Does this happen every time?


Other information:
pan 0.116, gnet 2.0.7, FreeBSD 6.1
Comment 1 Charles Kerr 2006-11-07 17:19:46 UTC
Created attachment 76156 [details] [review]
0.118 patch