Bug 363166 – IPv6: no IPv4 fallback http://bugzilla.gnome.org/show_bug.cgi?id=363166